<resources>
    <string name="app_name">Room1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_subscriber">ADD SUBSCRIBER</string>
    <string name="save">SAVE</string>
    <string name="enter_subscriber_name">Enter Subscriber Name</string>
    <string name="enter_subscriber_email">Enter Subscriber Email</string>
    <string name="update">Update</string>
    <string name="no_subscribers_added_yet">No Subscribers Added Yet!</string>
    <string name="subscriber_name">Subscriber Name</string>
    <string name="delete_subscriber">Delete Subscriber</string>
    <string name="delete_all_subscribers">Delete All Subscribers</string>
</resources>